<resources>
    <!--Általános-->
    <string name="app_name">Atakfashion</string>

    <!--Engedélyek párbeszédablak-->
    <string name="dialog_permissions_information">Az alkalmazás használatához engedélyek szükségesek!</string>

    <!--Párbeszédablak-->
    <string name="dialog_button_next">Tovább</string>
    <string name="dialog_button_turnon">Bekapcsolás</string>
    <string name="dialog_button_cancel">Mégse</string>
    <string name="dialog_button_alright">Rendben</string>
    <string name="dialog_button_ok">OK</string>

    <!--Főoldal-->
    <string name="main_button_in">Bevét</string>
    <string name="main_button_out">Kiadás</string>
    <string name="main_button_removal">Kiadott termékek</string>
    <string name="main_button_edit">Termék szerkesztése</string>
    <string name="main_button_photos">Fényképek</string>
    <string name="main_button_manual_print">Manuális nyomtatás</string>
    <string name="main_button_users">Felhasználók</string>
    <string name="main_button_settings">Beállítások</string>
    <string name="main_button_exit">Kilépés</string>

    <!--Beállítások-->
    <string name="settings_title">Beállítások</string>
    <string name="settings_title_version">Alkalmazás verzió</string>
    <string name="settings_title_stored_data">Tárolt adatok kezelése</string>
    <string name="settings_button_export">Export</string>
    <string name="settings_button_import">Import</string>
    <string name="settings_title_printer">Nyomtató beállításai</string>
    <string name="settings_title_is_auto_cut">Vágás darabonként</string>
    <string name="settings_title_is_cut_at_end">Vágás nyomtatás végén</string>
    <string name="settings_title_printer_name">Név</string>
    <string name="settings_title_printer_status">Állapot</string>
    <string name="settings_button_save">Mentés</string>
    <string name="settings_button_refresh">Frissítés</string>
    <string name="settings_api_hint">API elérhetősége</string>
    <string name="settings_printer_mac_address_hint">Nyomtató MAC címe</string>
    <string name="settings_printer_ip_address_hint">Nyomtató IP címe</string>

    <!--Konfig párbeszédablak-->
    <string name="dialog_config_title">Beállítások</string>
    <string name="dialog_config_api_hint">API címe</string>
    <string name="dialog_config_printer_mac_address_hint">Nyomtató MAC címe</string>
    <string name="dialog_config_printer_ip_address_hint">Nyomtató IP címe</string>
    <string name="dialog_config_button_save">Mentés</string>

    <!--Anyagelvonás-->
    <string name="out_title">Kiadás</string>
    <string name="out_button_done">Kiadás</string>
    <string name="out_empty_qr_code">Kérem olvasson be QR kódot!</string>
    <string name="out_item_name">Megnevezés</string>
    <string name="out_item_quantity">Kiadandó mennyiség</string>
    <string name="out_item_id">Azonosító</string>
    <string name="out_item_description">Leírás</string>
    <string name="out_item_price">Ár</string>
    <string name="out_item_scan_id">Termékazonosító: %1$s</string>

    <!--Termék szerkesztése-->
    <string name="edit_title">Termék szerkesztése</string>
    <string name="edit_item_title">Új termék</string>
    <string name="edit_item_title_id">Azonosító</string>
    <string name="edit_item_title_default_id">-</string>
    <string name="edit_item_title_category">Kategória</string>
    <string name="edit_item_title_quantity">Mennyiség</string>
    <string name="edit_item_title_presentation">Kiszerelés</string>
    <string name="edit_item_title_tax">Adónem (%)</string>
    <string name="edit_item_title_net_price">Nettó ár</string>
    <string name="edit_item_title_margin">Árrés (%)</string>
    <string name="edit_item_title_gross_price">Bruttó ár</string>
    <string name="edit_item_title_unit">Egység</string>
    <string name="edit_item_title_status">Státusz</string>
    <string name="edit_item_title_name">Megnevezés</string>
    <string name="edit_item_title_description">Leírás</string>
    <string name="edit_item_title_template">Sablon</string>
    <string name="edit_item_title_print_group">Csoportos nyomtatás</string>

    <!--Manuális nyomtatás-->
    <string name="manual_printing_title">Manuális nyomtatás</string>
    <string name="manual_printing_raw_text">Generálandó azonosító</string>
    <string name="manual_printing_quantity">Nyomtatandó mennyiség</string>
    <string name="manual_printing_generate">QR kód generálás</string>
    <string name="manual_printing_print">Nyomtatás</string>
    <string name="manual_printing_qrcode_empty">Kérem generáljon QR kódot!</string>
    <string name="manual_reprinting_qrcode_empty">Kérem olvassa be a QR kódot!</string>
    <string name="manual_reprinting_qrcode_scan">QR kód beolvasása</string>
    <string name="manual_options_reprint">QR kód újranyomtatása</string>
    <string name="manual_options_print_custom_text">Tetszőleges QR kód</string>
    <string name="manual_options_print_product">QR kód nyomtatása termék alapján</string>

    <!--PhoneServices-->
    <string name="dialog_settings_bluetooth_state">Kérem kapcsolja be a Bluetooth-t és próbálja újra!</string>
    <string name="dialog_settings_wifi_state">Kérem kapcsolja be a WIFI-t és próbálja újra!</string>
    <string name="dialog_settings_network_state">Kérem csatlakozzon az internethez és próbálja újra!</string>

    <!--Terméklista elem-->
    <string name="itemlist_title_id">Termékazonosító</string>
    <string name="itemlist_title_name">Terméknév</string>

    <!--Felvétel-->
    <string name="in_title">Felvétel</string>
    <string name="in_title_quantity">Felvenni kívánt mennyiség</string>
    <string name="in_title_print_group">Csoportos nyomtatás</string>
    <string name="in_title_template">Sablon értékkészletei</string>

    <!--Új termék hozzáadása-->
    <string name="new_item_title">Új termék</string>
    <string name="new_item_title_id">Azonosító</string>
    <string name="new_item_title_default_id">-</string>
    <string name="new_item_title_category">Kategória</string>
    <string name="new_item_title_quantity">Mennyiség</string>
    <string name="new_item_title_presentation">Kiszerelés</string>
    <string name="new_item_title_tax">Adónem (%)</string>
    <string name="new_item_title_net_price">Nettó ár</string>
    <string name="new_item_title_margin">Árrés (%)</string>
    <string name="new_item_title_gross_price">Bruttó ár</string>
    <string name="new_item_title_unit">Egység</string>
    <string name="new_item_title_status">Státusz</string>
    <string name="new_item_title_name">Megnevezés</string>
    <string name="new_item_title_description">Leírás</string>
    <string name="new_item_title_template">Sablon</string>
    <string name="new_item_title_print_group">Csoportos nyomtatás</string>

    <!--Fényképek-->
    <string name="photos_title">Fényképek</string>
    <string name="photos_qr_code_empty">Kérem olvassa be a QR kódot!</string>
    <string name="photos_qr_code_scan_error">Hiba történt a QR kód beolvasása során, kérem ismételje meg!</string>
    <string name="photos_scan_id">Termékazonosító: %1$s</string>
    <string name="photos_photo_ready">Fénykép elkészült!</string>

    <!--Felhasználók kezelése felület-->
    <string name="users_title">Felhasználók</string>
    <string name="users_select_user_title">Felhasználó kiválasztása</string>
    <string name="users_username">Felhasználónév</string>
    <string name="users_password">Jelszó</string>
    <string name="users_password_confirm">Jelszó megerősítése</string>
    <string name="users_permissions_title">Jogosultságok</string>
    <string name="users_permission_in">Bevét</string>
    <string name="users_permission_out">Kiadás</string>
    <string name="users_permission_removal">Kiadott termékek</string>
    <string name="users_permission_edit">Termék szerkesztése</string>
    <string name="users_permission_manual_printing">Manuális nyomtatás</string>
    <string name="users_permission_photos">Fényképek</string>
    <string name="users_permission_users">Felhasználók</string>
    <string name="users_permission_settings">Beállítások</string>

    <!--Kiadott termékek megjelenítése-->
    <string name="removal_title">Kiadott termékek</string>

    <!--Bejelentkezés felület-->
    <string name="login_username">Felhasználónév</string>
    <string name="login_password">Jelszó</string>
    <string name="login_login">Bejelentkezés</string>

    <!--Dátumválasztó ablak-->
    <string name="datepicker_save">Mentés</string>

    <!--Kiadott termék, listaelem-->
    <string name="removaled_list_item_product_id">Termékazonosító</string>
    <string name="removaled_list_item_product_name">Terméknév</string>
    <string name="removaled_list_item_product_quantity">Kiadott mennyiség</string>

    <!--Részletek-->
    <string name="details_title">Termék</string>
    <string name="details_title_id">Azonosító</string>
    <string name="details_title_name">Megnevezés</string>
    <string name="details_title_description">Leírás</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>